--- a/Login/Login.css
+++ b/Login/Login.css
@@ -1,5 +1,57 @@
 body {
-    background-color: red;
-
+    background-color:#F5B841;
+}
+#RegBox{
+    background-color:#6A041D;
+    width: 50%;
+    height: 300px;
+    display: flex;
+    gap:25% ;
+    flex-direction: column;
+    padding-left:4%;
+    padding-top: 5%;
+    padding-right: 4%;
+    padding-bottom: 0%;
+    position: relative; left: 25% ;top:100px;
+    position: relative; left: 25% ;bottom:100px;
+    align-content: space-between;
+    align-self: center;
+    font-size:40px;
+    font-family: 'Helvetica Neue', sans-serif;
+    outline: auto;
+    box-shadow:rgb(247, 0, 0);
+    box-shadow: 100px;
+    
+}
+#Subtitle{
+    padding-top: 0%;
+    align-self: center;
+    align-content: center;
+    position: relative;top:-20px;left: 0px; right: 0px;
+    width: 100%;
+    background-color:#F4FF52;
+    outline-style:solid;
+    outline-color:#1E2EDE ;
+    outline-width: 3px;
+}
+#Title{
+    display: flex;
+    padding-top: 0%;
+    align-self: center;
+    align-content: center;
+    position: relative;top:-20px;left: 10%; right: 20%;
+    width: 100%;
 
 }
+#box{
+    display: flex;
+    height: 50px;
+       width: 100%;
+    position: absolute;top: -10px; left: -10px; 
+    background-color:#F4FF52;
+    outline-style:solid;
+    outline-color:#1E2EDE ;
+    outline-width: 3px;
+
+}
+
