--- a/emailsite/main.css
+++ b/emailsite/main.css
@@ -1,6 +1,76 @@
+body{
+    background-color:#F5B841;
+}
 #content {
-    width: 500px;
-    height: 500px;
+    width: 98.4%;
+    height: 100%;
     text-align: center;
    
+}
+#BigForm{
+             width: 50%;
+            height: 50%;
+            display: flex;
+            position:absolute;top: 20%;left: 20%;right: 20%;
+            flex-direction: column;
+            background-color:#6A041D;
+            padding: 10px;
+            text-align: center;
+            -ms-flex-item-align: center;
+}
+#LeftM{     
+    width: 6%;
+    height: 50%;
+    display: flex;
+    position:absolute;top: 20%;left: 20%;right: 20%;
+    flex-direction: column;
+    background-color:#1b0ab4;
+    padding: 10px;
+    text-align: center;
+    -ms-flex-item-align: center;
+    z-index: 1;
+    opacity: 0.5;
+}
+#RightM{     
+    width: 6%;
+    height: 50%;
+    display: flex;
+    position:absolute;top: 20%;left: 64%;right: 0%;
+    flex-direction: column;
+    background-color:#19c709;
+    padding: 10px;
+    text-align: center;
+    -ms-flex-item-align: center;
+    z-index: 1;
+    opacity: 0.5;
+}
+#TopLeftM{   
+    width: 8%;
+    height: 50%;
+    display: flex;
+    position:absolute;top: 10%;left: 30%;right: 20%;
+    flex-direction: column;
+    background-color:#ff0000;
+    padding: 10px;
+    text-align: center;
+    -ms-flex-item-align: center;
+    z-index: 1;
+    opacity: 0.5;
+    transform: rotate(-65deg) ;
+  
+}
+#TopRightM{   
+    width: 8%;
+    height: 50%;
+    display: flex;
+    position:absolute;top: 10%;left: 53%;right: 0%;
+    flex-direction: column;
+    background-color:#ff0000;
+    padding: 10px;
+    text-align: center;
+    -ms-flex-item-align: center;
+    z-index: 1;
+    opacity: .5;
+    transform: rotate(65deg) ;
+  
 }
